Migrate HiveMQ Platform Operator tests to Java 25